# llm-engineer-starter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  submission.py
data/: parsed_inpatient_record.json
src/: agents.py  pdf.py  prompts.py  schemas.py  tools.py
